--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="20sp">
+    android:paddingBottom="15sp"
+    android:paddingTop="5sp">
 
 
     <LinearLayout
@@ -34,5 +35,5 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
-        android:textSize="20sp" />
+        android:textSize="22sp" />
 </LinearLayout>
