--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@android:color/holo_blue_dark" />
 
         <TextView
             android:id="@+id/category"
@@ -26,7 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/holo_green_dark" />
     </LinearLayout>
 
     <TextView
