--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="datenparty.datenparty.MainActivity">
-
+    tools:context="datenparty.datenparty.MainActivity"
+    android:background="@drawable/bg">
     <ListView
         android:id="@+id/artikelliste"
         android:layout_width="match_parent"
