--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -37,5 +37,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        android:textColor="@android:color/background_dark"/>
 </LinearLayout>
