--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="datenparty.datenparty.MainActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg3">
     <ListView
         android:id="@+id/artikelliste"
         android:layout_width="match_parent"
