--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="datenparty.datenparty.MainActivity"
-    android:background="@drawable/bg3">
+    android:background="@drawable/background">
+
+    <Button
+        android:id="@+id/button2"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="50sp"
+        android:text="Menu"
+        android:visibility="invisible"
+        android:layout_below="@+id/artikelliste"
+        android:layout_centerHorizontal="true" />
+
     <ListView
         android:id="@+id/artikelliste"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true" />
+        android:layout_width="500sp"
+        android:layout_height="490sp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true" />
 
 </RelativeLayout>
