--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,19 +13,27 @@
 
     <Button
         android:id="@+id/button2"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="50sp"
-        android:text="Menu"
-        android:visibility="invisible"
-        android:layout_below="@+id/artikelliste"
-        android:layout_centerHorizontal="true" />
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="match_parent"
+        android:layout_height="60sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="false"
+        android:clipChildren="false"
+        android:text="Kategorien"
+        android:textStyle="bold"
+        android:visibility="visible"
+        android:textColor="@android:color/holo_blue_light"/>
 
     <ListView
         android:id="@+id/artikelliste"
         android:layout_width="500sp"
         android:layout_height="490sp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="18dp" />
 
 </RelativeLayout>
